# Web-Based-LMS-in-CPP

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  seeder.cpp
_Plug n Play/data/: attendance.csv  courses.csv  enrollments.csv  students.csv  teachers.csv
include/: Admin.h  AttendanceRecord.h  CSVManager.h  Course.h  DataSeeder.h  Enrollment.h  HTMLTemplates.h  Student.h  Teacher.h  User.h
src/: Admin.cpp  AttendanceRecord.cpp  CSVManager.cpp  Course.cpp  DataSeeder.cpp  Enrollment.cpp  Student.cpp  Teacher.cpp  User.cpp
